@@ -2,6 +2,7 @@
 0.0201 | Piotr Roszatycki <dexter@cpan.org> | 2012-08-07
 
 * Log responses without body.
+* Log correctly responses with unknown status.
 
 ------------------------------------------------------------------------
 0.02 | Piotr Roszatycki <dexter@cpan.org> | 2012-08-07
